--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(0deg, #000000 0%, #1d4339 90%);
+    height: 100%;
+}
